test/with11_2.slq
def foo(const x:ğ”¹){
	with{ y:=H(x); }do{ /// error
		return y;
	}
}
